--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <div class="topVideo">
                     <video
                         class="svg-clipped-whell"
-                        src="./assets/videos/Wheel_1.mp4"
+                        src="./assets/videos/Wheel2.mp4"
                         loop
                         autoplay
                         muted
                     ></video>
-                    <svg width="740" height="740" viewBox="0 0 740 740" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="746" height="746" viewBox="0 0 746 746" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <clipPath id="svgWhelltPath">
                             <path
                                 d="M599.504 569.989L651.491 622.043C777.503 480.971 777.503 266.157 651.491 125.085L599.504 177.138C697.074 289.417 697.074 457.647 599.504 569.927V569.989Z"
