--- a/index.html
+++ b/index.html
@@ -79,6 +79,44 @@
                 </div>
             </div>
         </div>
+        <div class="warper">
+            <video class="baseVideo" src="./assets/videos/1920px by 961px.mp4" autoplay muted></video>
+            <div class="topVideoWarper">
+                <div class="topVideo560">
+                    <video
+                        class="svg-clipped-whell560"
+                        src="./assets/videos/Wheel toBack_560.mp4"
+                        loop
+                        autoplay
+                        muted
+                    ></video>
+                    <svg width="560" height="560" viewBox="0 0 560 560" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <clipPath id="svgWhelltPath560">
+                            <path
+                                d="M450.03 427.874L489.055 466.949C583.648 361.05 583.648 199.796 489.055 93.8975L450.03 132.972C523.273 217.257 523.273 343.542 450.03 427.827V427.874Z"
+                                fill="#475F70" />
+                            <path
+                                d="M54.9614 280.423C54.9614 225.627 74.3955 173.851 109.97 132.977L71.0075 93.8975C25.1279 145.296 0 210.901 0 280.423C0 349.946 25.1279 415.598 71.0075 466.949L109.97 427.869C74.4426 386.949 54.9614 335.173 54.9614 280.423Z"
+                                fill="#475F70" />
+                            <path
+                                d="M280.423 54.9614C335.22 54.9614 386.948 74.3955 427.869 109.97L466.949 71.0075C415.598 25.1279 349.945 0 280.423 0C210.901 0 145.296 25.1279 93.8972 71.0075L132.977 109.97C173.898 74.4426 225.626 54.9614 280.423 54.9614Z"
+                                fill="#475F70" />
+                            <path
+                                d="M132.972 450.03L93.8972 489.043C146.846 536.348 213.623 560 280.447 560C347.27 560 413.999 536.348 466.949 489.043L427.874 450.03C343.542 523.249 217.304 523.202 133.019 450.03H132.972Z"
+                                fill="#475F70" />
+                        <clipPath />
+                    </svg>
+                </div>
+                <div  id="transparent">
+                    <svg width="560" height="560" viewBox="0 0 560 560" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M54.9614 280.423C54.9614 225.627 74.3955 173.851 109.97 132.977L71.0075 93.8975C25.1279 145.296 0 210.901 0 280.423C0 349.946 25.1279 415.598 71.0075 466.949L109.97 427.869C74.4426 386.949 54.9614 335.173 54.9614 280.423Z"
+                            fill="#475F70" />
+                    </svg>          
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
