--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="warper">
-            <video id="baseVideo" class="baseVideo" preload="true"  muted="muted" volume="0">
+            <video id="baseVideo" class="baseVideo" preload="falce"  muted="muted">
                 <source src="" type="video/mp4">
             </video>
             <div class="topVideoWarper">
