--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="main">
         <div class="warper">
-            <video id="baseVideo" class="baseVideo" preload="metadata"  muted="muted">
+            <video id="baseVideo" class="baseVideo" preload="true"  muted="muted">
                 <source src="" type="video/mp4">
             </video>
             <div class="topVideoWarper">
-                <div id="topVideoContainer" class="topVideo560">
-                    <video id="topVideo" loop muted>
+                <div id="topVideoContainer" class="topVideo560" >
+                    <video id="topVideo"preload="true" loop muted>
                         <source src="" type="video/mp4" >
                     </video>
                 </div>
