--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="main">
         <div class="warper">
             <video id="baseVideo" class="baseVideo" preload="true"  muted="muted">
-                <source src="" type="video/mp4">
+                <source src="" type="video/webm">
             </video>
             <div class="topVideoWarper">
                 <div id="topVideoContainer" class="topVideo560" >
                     <video id="topVideo"preload="true" loop muted>
-                        <source src="" type="video/mp4" >
+                        <source src="" type="video/webm" >
                     </video>
                 </div>
             <div id="transparent" class="transparent">
